@@ -1,14 +1,6 @@
-FROM gradle:4.7.2-jdk18-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
-
-FROM openjdk:18-jre-slim
-
+FROM openjdk:18-jdk-alpine
+LABEL maintainer="author@javatodev.com"
+VOLUME /main-app
+ADD build/libs/bookstore-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-jar","/app.jar"]
